--- a/Unity/FFramework/Settings/ConfigSettings.json
+++ b/Unity/FFramework/Settings/ConfigSettings.json
@@ -1,7 +1,5 @@
 ﻿{
     "generatePath": "Assets/Scripts/Project/ConfigCache/",
     "originPath": "ExcelConfig/",
-    "ignoreFileName": [
-        "ExcelConfig\\PropList.xlsx"
-    ]
+    "ignoreFileName": []
 }
